# InteropDemo

./: .gitignore  README.md
CxxTest/: CxxTest.cpp  CxxTest.hpp  Vector.h  module.modulemap
CxxTest/include/: CxxTest.hpp  Types.h  module.modulemap
CxxTest/include/lucid/: Types.h  Vector.h
InteropDemo/: ContentView.swift  InteropDemo.swift  InteropDemoApp.swift  MapView.swift  MapViewController.swift  OnyxView.swift  OnyxViewController.swift
InteropDemo.xcodeproj/: project.pbxproj
InteropDemo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
InteropDemo.xcodeproj/project.xcworkspace/xcuserdata/nathan.stouffer.xcuserdatad/: UserInterfaceState.xcuserstate
InteropDemo.xcodeproj/xcuserdata/nathan.stouffer.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
InteropDemo.xcodeproj/xcuserdata/nathan.stouffer.xcuserdatad/xcschemes/: xcschememanagement.plist
InteropDemoTests/: InteropDemoTests.swift
InteropDemoUITests/: InteropDemoUITests.swift  InteropDemoUITestsLaunchTests.swift
code/: CMakeLists.txt  build.sh  copy.sh
code/src/: CMakeLists.txt
code/src/lucid/: CMakeLists.txt
code/src/lucid/src/: CMakeLists.txt
code/src/onyx/: API.cpp  API.h  CMakeLists.txt
code/src/shader/src/: CMakeLists.txt
code/src/shader/src/shader/: uniform.cpp  uniform.h
tmp.xcframework/: Info.plist
xcframework/: build-framework.sh
xcframework/onyx.xcframework/ios-arm64/Headers/: API.h
xcframework/onyx.xcframework/ios-x86_64-simulator/Headers/: CxxTest.hpp  module.modulemap  onyx.hpp
xcframework/tmp.xcframework/: Info.plist
